# mlops-zoomcamp

./: .gitignore  pyproject.toml
01-intro/: homework1.ipynb
02-experiment-tracking/: duration-prediction.ipynb  duration-prediction.py  run_id.txt
03-orchestration/: main.py  model.pkl
