[project]
name = "mlops-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hyperopt>=0.2.7",
    "jupyter>=1.1.1",
    "mlflow>=2.22.0",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "xgboost>=3.0.2",
]
